Build/third-party-libraries/packages/nuget.org/nunit3testadapter/3.17.0/readme.md
NUnit3TestAdapter [3.17.0](https://www.nuget.org/packages/NUnit3TestAdapter/3.17.0)
--------------------

Used by: AspNetCore internal, AspNetCoreNSwag internal, AspNetCoreSwashbuckle internal, Core internal, DesignTime internal, SelfHost internal

Target frameworks: net461, net5.0, netcoreapp2.1, netcoreapp3.1

License: [MIT](../../../../licenses/mit) 

- package license: [Unknown]() 
- repository license: [MIT](https://github.com/nunit/nunit3-vs-adapter) 
- project license: [Unknown](https://github.com/nunit/docs/wiki/Visual-Studio-Test-Adapter) , License should be verified on https://github.com/nunit/docs/wiki/Visual-Studio-Test-Adapter

Description
-----------
The NUnit3 TestAdapter for Visual Studio, all versions from 2012 and onwards, and DotNet (incl. .Net core).

          Note that this package ONLY contains the adapter, not the NUnit framework.
          For VS 2017 and forward, you should add this package to every test project in your solution. (Earlier versions only require a single adapter package per solution.)

          Note that with this package you should not install the VSIX adapter package.

Remarks
-----------
https://nunit.org/

NUnit is Open Source software and NUnit 3 is released under the MIT license. Earlier releases used the NUnit license.


Dependencies 7
-----------

|Name|Version|
|----------|:----|
|[Microsoft.DotNet.InternalAbstractions](../../../../packages/nuget.org/microsoft.dotnet.internalabstractions/1.0.0)|1.0.0|
|[System.ComponentModel.EventBasedAsync](../../../../packages/nuget.org/system.componentmodel.eventbasedasync/4.3.0)|4.3.0|
|[System.ComponentModel.TypeConverter](../../../../packages/nuget.org/system.componentmodel.typeconverter/4.3.0)|4.3.0|
|[System.Runtime.InteropServices.RuntimeInformation](../../../../packages/nuget.org/system.runtime.interopservices.runtimeinformation/4.3.0)|4.3.0|
|[System.Threading.Thread](../../../../packages/nuget.org/system.threading.thread/4.3.0)|4.3.0|
|[System.Xml.XPath.XmlDocument](../../../../packages/nuget.org/system.xml.xpath.xmldocument/4.3.0)|4.3.0|
|[System.Xml.XmlDocument](../../../../packages/nuget.org/system.xml.xmldocument/4.3.0)|4.3.0|

*This page was generated by a tool.*